# danilevk

devel/: .catkin  .rosinstall  setup.sh
devel/include/ardrone_autonomy/: CamSelectRequest.h  CamSelectResponse.h  FlightAnimRequest.h  FlightAnimResponse.h  LedAnimRequest.h  LedAnimResponse.h  Navdata.h  RecordEnableRequest.h  RecordEnableResponse.h  matrix33.h  navdata_adc_data_frame.h  navdata_altitude.h  navdata_demo.h  navdata_euler_angles.h  navdata_games.h  navdata_gyros_offsets.h  navdata_hdvideo_stream.h  navdata_kalman_pressure.h  navdata_magneto.h  navdata_phys_measures.h  navdata_pressure_raw.h  navdata_pwm.h  navdata_raw_measures.h  navdata_rc_references.h  navdata_references.h  navdata_time.h  navdata_trackers_send.h  navdata_trims.h  navdata_video_stream.h  navdata_vision.h  navdata_vision_detect.h  navdata_vision_of.h  navdata_vision_perf.h  navdata_vision_raw.h  navdata_watchdog.h  navdata_wifi.h  navdata_wind_speed.h  navdata_zimmu_3000.h  vector21.h  vector31.h
devel/include/cvg_sim_msgs/: Altimeter.h  Altitude.h  AttitudeCommand.h  Compass.h  ControllerState.h  HeadingCommand.h  HeightCommand.h  MotorCommand.h  MotorPWM.h  MotorStatus.h  PositionXYCommand.h  RC.h  RawImu.h  RawMagnetic.h  RawRC.h  RuddersCommand.h  ServoCommand.h  Supply.h  ThrustCommand.h  VelocityXYCommand.h  VelocityZCommand.h  YawrateCommand.h
devel/lib/ar_drone_keyboard/: keyboard_ardrone
devel/lib/message_to_tf/: message_to_tf
devel/lib/pkgconfig/: ar_drone_keyboard.pc  ardrone_autonomy.pc  beginner_tutorials.pc  cvg_sim_gazebo.pc  cvg_sim_gazebo_plugins.pc  cvg_sim_msgs.pc  message_to_tf.pc  pruebadecontrol1.pc  pruebademovimiento1.pc
devel/lib/pruebadecontrol1/: pruebadecontrol
devel/lib/pruebademovimiento1/: pruebademovimiento
devel/share/ar_drone_keyboard/cmake/: ar_drone_keyboardConfig.cmake
devel/share/ardrone_autonomy/cmake/: ardrone_autonomy-msg-paths.cmake  ardrone_autonomyConfig.cmake
devel/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
devel/share/cvg_sim_gazebo/cmake/: cvg_sim_gazeboConfig.cmake
devel/share/cvg_sim_gazebo_plugins/cmake/: cvg_sim_gazebo_plugins-msg-extras.cmake  cvg_sim_gazebo_pluginsConfig.cmake
devel/share/cvg_sim_msgs/cmake/: cvg_sim_msgs-msg-paths.cmake  cvg_sim_msgsConfig.cmake
devel/share/message_to_tf/cmake/: message_to_tfConfig.cmake
devel/tmp/: ardronelib-gitclone.cmake  ardronelib-gitupdate.cmake
install/: .rosinstall  _setup_util.py  setup.sh
src/ar_drone_keyboard/: CMakeLists.txt  package.xml
src/ar_drone_keyboard/include/keyboard_control/: keyboard_control.h
src/ar_drone_keyboard/src/: keyboard.cpp  keyboard_control.cpp
src/pruebadecontrol1/: CMakeLists.txt
src/pruebadecontrol1/include/pruebadecontrol1/: pruebadecontrol.h
src/pruebadecontrol1/src/: pruebadecontrol.cpp  pruebadecontrol_.cpp
src/pruebademovimiento1/: CMakeLists.txt
src/pruebademovimiento1/include/pruebademovimiento1/: pruebademovimiento.h
src/pruebademovimiento1/src/: pruebademovimiento.cpp  pruebademovimiento_.cpp
(+9 files in other folders)
